# videoaudit

./: .env  .env.example  APP.py  Dockerfile  README.MD  config.py  docker-compose.yml  frame_extractor.py  main.py  prompts.py  pyproject.toml  utils.py  video_compression.py
frames/: safe_cleaner.py
model_tarin/: tarin.py
src/: config.py  frame_extractor.py  utils.py
src/model_tarin/: README.MD
test/: yolo_video_pre_test.py  yolotest.py
