[tool.poetry]
name = "videoaudit"
version = "0.1.0"
description = ""
authors = ["chensonglin <893969679@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dashscope = "^1.25.17"
fastapi = "^0.136.0"
pydantic = "^2.13.1"
pydantic-settings = "^2.13.1"
scenedetect = "^0.6.7.1"
tenacity = "^9.1.4"
uvicorn = "^0.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



